--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <div id="popup" class="popup-overlay">
         <div class="popup-content">
-            <h2><span class="tituloboton">EVENTO GRATUITO</span> para entrenadores</h2> 
+            <h2><span class="tituloboton">EVENTO GRATUITO</span><br> para entrenadores</h2> 
 
             <form id="registrationForm">
                 <input type="text" id="name" placeholder="Nombre" required>
