--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Segunda sección -->
     <section class="gym-section">
         <div class="gym-content">
-            <div class="contcfc"><h1><span class="cfc"> <span class="cfc-color">Mi gimnasio</span> <b>CFC GYM</b></span></h1></div>
+            <div class="contcfc"><h1><span class="cfc"> <span class="cfc-color">Mi gimnasio</span> <br><b>CFC GYM</b></span></h1></div>
             <div class="contimg"><img src="34.jpg" alt="Gimnasio CFC" class="gym-image"></div>
             <div class="container-boton">
                 
